--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 <p id="where">
   <strong>Where:</strong>
   {{page.address}}.
-  Get directions with
+  Plant Sciences Building, room E008. Get directions with
   <a href="//www.openstreetmap.org/?mlat={{page.latlng | replace:',','&mlon='}}&zoom=16">OpenStreetMap</a>
   or
   <a href="//maps.google.com/maps?q={{page.latlng}}">Google Maps</a>.
