--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <li>Loops and conditionals</li>
       <li>Defensive programming</li>
       <li>Using R from the command line</li>
-      <li><a href="http://resbaz.github.io/r-intermediate-gapminder/">Reference...</a></li>
+      <li><a href="https://github.com/sckott/r-novice-gapminder">Reference...</a></li>
     </ul>
   </div>
   <!--
