--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <li>Looping over files</li>
       <li>Creating and running shell scripts</li>
       <li>Finding things</li>
-      <li><a href="{{site.swc_githubio}}/shell-novice/reference.html">Reference...</a></li>
+      <li><a href="{{site.swc_githubio}}/shell-novice/">Reference...</a></li>
     </ul>
   </div>
   <div class="col-md-6">
@@ -318,7 +318,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <li>Resolving conflicts</li>
       <li>Open licenses</li>
       <li>Where to host work, and why</li>
-      <li><a href="{{site.swc_githubio}}/git-novice/reference.html">Reference...</a></li>
+      <li><a href="{{site.swc_githubio}}/git-novice">Reference...</a></li>
     </ul>
   </div>
   <!-- <div class="col-md-6">
