--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   on. They should have a few specific software packages installed (listed
   <a href="#setup">below</a>). They are also required to abide by
   Software Carpentry's
-  <a href="{{site.swc_site}}/conduct.html">Code of Conduct</a>.
+  <a href="{{site.swc_site}}/conduct">Code of Conduct</a>.
 </p>
 
 <!--
@@ -268,13 +268,15 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
     <ul>
-      <li>Using libraries</li>
-      <li>Working with arrays</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li>Using R from the command line</li>
+      <li>Intro to RStudio</li>
+      <li>Getting R help</li>
+      <li>R data structures</li>
+      <li>Data subsetting</li>
+      <li>Control flow</li>
+      <li>Vectorization</li>
+      <li>Functions</li>
+      <li>Writing data</li>
+      <li>Data wrangling: dplyr</li>
       <li><a href="https://github.com/sckott/r-novice-gapminder">Reference...</a></li>
     </ul>
   </div>
