--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <li>Ignoring files</li>
       <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
       <li>Resolving conflicts</li>
-      <li>Open licenses</li>
-      <li>Where to host work, and why</li>
+      <li>Pull Requests</li>
+      <li>Forking</li>
       <li><a href="{{site.swc_githubio}}/git-novice">Reference...</a></li>
     </ul>
   </div>
