--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ enddate: 2016-07-29        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Daisie Huang", "Scott Chamberlain"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Kathryn Turner", "Brook Moyers", "Grey Monroe"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "brook.moyers@gmail.com"      # contact email address for workshop organizer, such as "grace@hopper.org"
-etherpad:         # optional (insert the URL for your Etherpad if you're using one)
+etherpad: http://pad.software-carpentry.org/2016-07-28-CSU
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 
