fix link to gapminder lesson

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       <li>Functions</li>
       <li>Writing data</li>
       <li>Data wrangling: dplyr</li>
-      <li><a href="https://github.com/sckott/r-novice-gapminder">Reference...</a></li>
+      <li><a href="http://swcarpentry.github.io/r-novice-gapminder/">Reference...</a></li>
     </ul>
   </div>
   <!--
